--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
             es: {
                 nav: {
                     collection: "Colección",
-                    process: "Proceso",
                     philosophy: "Filosofía",
                     contact: "Contacto",
                 },
@@ -175,27 +174,28 @@
                         }
                     ]
                 },
-                process: {
-                    title: "Su camino hacia la excelencia",
-                    steps: [
-                        { title: "1. Consulta", desc: "Entendemos su visión y espacio." },
-                        { title: "2. Creación", desc: "Nuestros maestros artesanos inician el trabajo." },
-                        { title: "3. Instalación", desc: "Entrega impecable, sin residuos, sin ruido." }
-                    ]
-                },
                 cta_section: {
                     title: "¿Listo para elevar su espacio?",
                     desc: "Hablemos hoy. Sin compromisos, solo claridad.",
                     btn: "Escríbenos"
                 },
+                offer: {
+                    title: "Información de compra",
+                    items: [
+                        "Precio: Todas las puertas tienen un precio de L25,000.",
+                        "El precio incluye instalación en el caso urbano de San Pedro Sula.",
+                        "Tiempo de entrega estimado: 1 mes."
+                    ]
+                },
                 footer: {
-                    rights: "Todos los derechos reservados."
+                    rights: "Todos los derechos reservados.",
+                    office_label: "Oficina:",
+                    office: "Plaza Mahanaim, Sector Palenque, San Pedro Sula, Honduras."
                 }
             },
             en: {
                 nav: {
                     collection: "Collection",
-                    process: "Process",
                     philosophy: "Philosophy",
                     contact: "Contact",
                 },
@@ -243,21 +243,23 @@
                         }
                     ]
                 },
-                process: {
-                    title: "Your path to excellence",
-                    steps: [
-                        { title: "1. Consultation", desc: "We understand your vision and space." },
-                        { title: "2. Creation", desc: "Our master craftsmen begin their work." },
-                        { title: "3. Installation", desc: "Flawless delivery. No mess, no noise." }
-                    ]
-                },
                 cta_section: {
                     title: "Ready to elevate your space?",
                     desc: "Let's talk today. No pressure, just clarity.",
                     btn: "Message Us"
                 },
+                offer: {
+                    title: "Purchase Information",
+                    items: [
+                        "Price: All doors are priced at L25,000.",
+                        "The price includes installation within the urban area of San Pedro Sula.",
+                        "Estimated delivery time: 1 month."
+                    ]
+                },
                 footer: {
-                    rights: "All rights reserved."
+                    rights: "All rights reserved.",
+                    office_label: "Office:",
+                    office: "Plaza Mahanaim, Sector Palenque, San Pedro Sula, Honduras."
                 }
             }
         };
@@ -310,7 +312,6 @@
                             {/* Desktop Menu */}
                             <div className="hidden md:flex items-center space-x-8">
                                 <a href="#collection" className={`${scrolled ? 'text-forest' : 'text-parchment'} hover:text-gold transition-colors font-medium text-sm tracking-wide`}>{t.nav.collection}</a>
-                                <a href="#process" className={`${scrolled ? 'text-forest' : 'text-parchment'} hover:text-gold transition-colors font-medium text-sm tracking-wide`}>{t.nav.process}</a>
                                 <a href="#philosophy" className={`${scrolled ? 'text-forest' : 'text-parchment'} hover:text-gold transition-colors font-medium text-sm tracking-wide`}>{t.nav.philosophy}</a>
                                 <a href="#contact" className={`px-5 py-2 border transition-all rounded-full text-sm font-semibold ${scrolled ? 'border-forest text-forest hover:bg-forest hover:text-parchment' : 'border-parchment text-parchment hover:bg-parchment hover:text-forest'}`}>
                                     {t.nav.contact}
@@ -333,7 +334,6 @@
                         {isMenuOpen && (
                             <div className="absolute top-full left-0 w-full bg-parchment shadow-lg md:hidden flex flex-col items-center py-8 space-y-6 border-t border-olive/10">
                                 <a href="#collection" onClick={() => setIsMenuOpen(false)} className="text-lg font-medium">{t.nav.collection}</a>
-                                <a href="#process" onClick={() => setIsMenuOpen(false)} className="text-lg font-medium">{t.nav.process}</a>
                                 <a href="#philosophy" onClick={() => setIsMenuOpen(false)} className="text-lg font-medium">{t.nav.philosophy}</a>
                                 <a href="#contact" onClick={() => setIsMenuOpen(false)} className="text-lg font-medium text-gold">{t.nav.contact}</a>
                                 <button onClick={toggleLang} className="flex items-center space-x-2 text-olive border px-4 py-1 rounded-full border-olive/30">
@@ -452,27 +452,6 @@
                         </div>
                     </section>
 
-                    {/* Process Section */}
-                    <section id="process" className="py-24 bg-white">
-                         <div className="container mx-auto px-6 max-w-4xl">
-                            <h2 className="text-3xl md:text-4xl font-light text-forest text-center mb-16">{t.process.title}</h2>
-                            
-                            <div className="space-y-12">
-                                {t.process.steps.map((step, index) => (
-                                    <div key={index} className="flex flex-col md:flex-row items-center md:items-start text-center md:text-left group">
-                                        <div className="flex-shrink-0 w-12 h-12 rounded-full border border-gold text-gold flex items-center justify-center font-bold text-lg mb-4 md:mb-0 md:mr-8 group-hover:bg-gold group-hover:text-white transition-all">
-                                            {index + 1}
-                                        </div>
-                                        <div>
-                                            <h3 className="text-xl font-semibold text-forest mb-2">{step.title}</h3>
-                                            <p className="text-olive leading-relaxed">{step.desc}</p>
-                                        </div>
-                                    </div>
-                                ))}
-                            </div>
-                         </div>
-                    </section>
-
                     {/* Contact / CTA */}
                     <section id="contact" className="py-24 bg-parchment relative overflow-hidden">
                         {/* Decorative Circle */}
@@ -481,6 +460,14 @@
 
                         <div className="container mx-auto px-6 relative z-10 text-center">
                             <h2 className="text-4xl md:text-5xl font-light text-forest mb-6">{t.cta_section.title}</h2>
+                            <div className="max-w-3xl mx-auto mb-10 p-6 md:p-8 bg-white/80 backdrop-blur-sm border border-olive/20 rounded-2xl text-left">
+                                <h3 className="text-2xl font-semibold text-forest mb-4 text-center">{t.offer.title}</h3>
+                                <ul className="space-y-3 text-olive text-base md:text-lg list-disc pl-6">
+                                    {t.offer.items.map((item, index) => (
+                                        <li key={index}>{item}</li>
+                                    ))}
+                                </ul>
+                            </div>
                             <p className="text-xl text-olive mb-10 max-w-xl mx-auto">{t.cta_section.desc}</p>
                             
                             <div className="flex justify-center items-center">
@@ -514,8 +501,9 @@
                                 <a href="https://wa.me/50499127863" target="_blank" className="hover:text-gold transition-colors">WhatsApp</a>
                             </div>
 
-                            <div className="text-xs">
-                                &copy; {new Date().getFullYear()} Madeteka. {t.footer.rights}
+                            <div className="text-xs text-center md:text-right space-y-1">
+                                <p>&copy; {new Date().getFullYear()} Madeteka. {t.footer.rights}</p>
+                                <p><span className="font-semibold">{t.footer.office_label}</span> {t.footer.office}</p>
                             </div>
                         </div>
                     </footer>
