Agregué links correctos a las redes sociales

--- a/index.html
+++ b/index.html
@@ -496,8 +496,8 @@
                             </div>
                             
                             <div className="flex space-x-6 text-sm font-medium">
-                                <a href="https://instagram.com" target="_blank" className="hover:text-gold transition-colors">Instagram</a>
-                                <a href="https://facebook.com" target="_blank" className="hover:text-gold transition-colors">Facebook</a>
+                                <a href="https://www.instagram.com/lamadeteka/" target="_blank" className="hover:text-gold transition-colors">Instagram</a>
+                                <a href="http://facebook.com/lamadeteka" target="_blank" className="hover:text-gold transition-colors">Facebook</a>
                                 <a href="https://wa.me/50499127863" target="_blank" className="hover:text-gold transition-colors">WhatsApp</a>
                             </div>
 
