--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                     contact: "Contacto",
                 },
                 hero: {
-                    title: "La entrada a su legado.",
-                    subtitle: "Puertas de caoba premium. Artesanía eterna, diseñada para una vida de tranquilidad.",
+                    title: "La entrada que su casa merece.",
+                    subtitle: "Caoba seleccionada a mano. Diseño que no improvisa, calidad que no cede, entrega que no falla.",
                     cta: "Ver Colección"
                 },
                 values: {
