Agregué la medida estándar de la puerta

--- a/index.html
+++ b/index.html
@@ -179,14 +179,15 @@
                     desc: "Hablemos hoy. Sin compromisos, solo claridad.",
                     btn: "Escríbenos"
                 },
-                offer: {
-                    title: "Información de compra",
-                    items: [
-                        "Precio: Todas las puertas tienen un precio de L25,000.",
-                        "El precio incluye instalación en el caso urbano de San Pedro Sula.",
-                        "Tiempo de entrega estimado: 1 mes."
-                    ]
-                },
+                    offer: {
+                        title: "Información de compra",
+                        items: [
+                            "Precio: Todas las puertas tienen un precio de L25,000.",
+                            "El precio incluye instalación en el caso urbano de San Pedro Sula.",
+                            "Tiempo de entrega estimado: 1 mes.",
+                            "Tamaño estándar de las puertas: 36\" de ancho x 80\" de alto."
+                        ]
+                    },
                 footer: {
                     rights: "Todos los derechos reservados.",
                     office_label: "Oficina:",
